Change of img ico

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="img/dinero.png"/>
+    <link rel="shortcut icon" type="image/png" href="img/money.png" >
     <title>HOME BANKING</title>
     <script type="text/javascript" src="js/homebanking.js"></script>
   </head>
@@ -28,7 +28,7 @@
       </div>
       <div class="green-container">
         <div class="cuenta-info">
-          <p>Saldo en tu cuenta</p>
+          <p>Saldo en tu Cuenta</p>
           <h3 id="saldo-cuenta">$</h3>
           <p id="limite-extraccion">Tu límite de extracción es: </p>
         </div>
